JBang: ignore malformed directives test due to regression in JBang (jbangdev/jbang#2236)
Additionally: make PIP comment parsing in JBangIntegration more robust.